# dbt-transactions

./: .gitignore  .user.yml  Dockerfile  README.md  dbt_project.yml  docker-compose.override.yml  packages.txt  profiles.yml  pyproject.toml  requirements.txt  transactions.sql
.astro/: config.yaml
dags/: only_models.py  transaction_dbt_dag.py  transactionsdag.py
dbt/transactions/: README.md
dbt/transactions/models/marts/: finance_products.sql  finance_transactions.sql
include/: constants.py
transactions/: .user.yml  README.md  dbt_project.yml
transactions/macros/: schemaa_name.sql
transactions/models/marts/: finance_customers.sql  finance_products.sql
transactions/models/reports/: report_finance.sql
transactions/models/staging/: stg_subproducts.sql
transactions/seeds/: test_seeds2.csv
transactions/snapshots/: customers.sql
